Removed condition to show of other department assignment

--- a/src/app/modules/helpdesk/helpdesk.submitted.component.html
+++ b/src/app/modules/helpdesk/helpdesk.submitted.component.html
@@ -82,7 +82,7 @@
                                 <ui-form #addTicketForm [controlMetas]="helpDeskSubmitHub" [model]="helpDeskSubmitModel" [formReadonly]='true' [errorOnlyOnSubmit]='formSubmitted'
                                     formCss='' controlCss='' columnOrientation='2'>
                                 </ui-form>
-                                <div class="col s12 m-bottom20 padding-zero" *ngIf="action == 0 && selectedStatus != 6 && selectedStatus != 7 && assignToVisible == true ">
+                                <div class="col s12 m-bottom20 padding-zero" *ngIf="action == 0 && selectedStatus != 6 && selectedStatus != 7">
                                     <div class="col m6">
                                         <select placeholder="Status" name="status" [(ngModel)]="helpDeskSubmitModel.status" materialize="material_select" [materializeSelectOptions]="issueStatusCollection"
                                             (change)="onIssueStatusChanged($event.target.value)">
@@ -91,7 +91,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col s12 m6 padding-zero" *ngIf="(action == 0 && selectedStatus != 6 && selectedStatus != 7 && assignToVisible == true)">
+                                    <div class="col s12 m6 padding-zero" *ngIf="(action == 0 && selectedStatus != 6 && selectedStatus != 7)">
                                         <div class="row margin-zero">
                                             <div class="custom-input-field col s12">
                                                 <h6>Assign to</h6>
@@ -108,8 +108,8 @@
                                     </div>
                                     <div class="col s12 m6 padding-zero">
                                         <div class="row margin-zero">
-                                            <div class="col s6" *ngIf="(action == 0 && selectedStatus != 6 && selectedStatus != 7 && assignToVisible == true) ">
-                                                <select name="assignedTo" placeholder="Status" [(ngModel)]="helpDeskSubmitModel.assignedTo" materialize="material_select"
+                                            <div class="col s6" *ngIf="(action == 0 && selectedStatus != 6 && selectedStatus != 7)">
+                                                <select name="assignedTo" placeholder="roles" [(ngModel)]="helpDeskSubmitModel.assignedTo" materialize="material_select"
                                                     [materializeSelectOptions]="dropDownCollection">
                                                             <option *ngFor="let option of dropDownCollection" [value]="option.id">{{option.text}}</option> </select>
                                             </div>
