--- a/src/app/modules/travel/travel.approval.history.view.template.html
+++ b/src/app/modules/travel/travel.approval.history.view.template.html
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <repeater [source]="extensionDetails">
-                        <template let-item="item">
+                        <template #tmplRepeater let-item="item">
                             <div class="approvals-wrapper read-more-target">
                                 <div class="row m-bottom0 valign-wrapper">
                                     <div class="col s12 m6 l1 offset-l4"><span class="expense-label hide-on-large-only">Travel Title</span>{{travelModel.travelTitle}}</div>
@@ -141,7 +141,7 @@
                             <div class="padding-20">
                                 <div *ngIf="flightDetails.length > 0" class="scrollable-flight-options">
                                     <repeater [source]="flightDetails">
-                                        <template let-item="item">
+                                        <template #tmplRepeater let-item="item">
                                             <div class="row">
                                                 <div class="col s12">
                                                     <div class="card white travel-card margin-zero padding-zero">
@@ -801,7 +801,7 @@
                                             </div>
                                         </div>
                                         <repeater [source]="travelModel.employeeVisas">
-                                            <template let-visa="item">
+                                            <template #tmplRepeater let-visa="item">
                                                 <div class="saved-data">
                                                     <div class="row valign-wrapper">
                                                         <div class="col s12">
@@ -884,7 +884,7 @@
                                             </div>
                                         </div>
                                         <repeater [source]="travelModel.employeeContacts">
-                                            <template let-contact="item">
+                                            <template #tmplRepeater let-contact="item">
                                                 <div class="saved-data">
                                                     <div class="row">
                                                         <div class="col s7">
@@ -1098,7 +1098,7 @@
                                                     </div>
                                                 </div>
                                                 <repeater [source]='travelModel.documentUploads'>
-                                                    <template let-item='item'>
+                                                    <template #tmplRepeater let-item='item'>
                                                         <div class="saved-data m-bottom25">
                                                             <div class="row valign-wrapper">
                                                                 <div class="col s7">
