--- a/src/app/modules/travel/travel.view.my.history.template.html
+++ b/src/app/modules/travel/travel.view.my.history.template.html
@@ -138,7 +138,7 @@
                                                 </div>
                                             </div>
                                             <repeater [source]="travelModel.employeeVisas">
-                                                <template let-visa="item">
+                                                <template #tmplRepeater let-visa="item">
                                                     <div class="saved-data">
                                                         <div class="row valign-wrapper">
                                                             <div class="col s12">
@@ -221,7 +221,7 @@
                                                 </div>
                                             </div>
                                             <repeater [source]="travelModel.employeeContacts">
-                                                <template let-contact="item">
+                                                <template #tmplRepeater let-contact="item">
                                                     <div class="saved-data">
                                                         <div class="row">
                                                             <div class="col s7">
@@ -448,7 +448,7 @@
                                                         </div>
                                                     </div>
                                                     <repeater *ngIf="travelModel.documentUploads.length > 0" [source]='travelModel.documentUploads'>
-                                                        <template let-item='item'>
+                                                        <template #tmplRepeater let-item='item'>
                                                             <div class="saved-data m-bottom25">
                                                                 <div class="row valign-wrapper">
                                                                     <div class="col s7">
