--- a/src/app/modules/travel/travel.view.request.template.html
+++ b/src/app/modules/travel/travel.view.request.template.html
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <repeater [source]="extensionDetails">
-                        <template let-item="item">
+                        <template #tmplRepeater let-item="item">
                             <div class="approvals-wrapper read-more-target">
                                 <div class="row m-bottom0 valign-wrapper">
                                     <div class="col s12 m6 l1 offset-l4"><span class="expense-label hide-on-large-only">Travel Title</span>{{travelModel.travelTitle}}</div>
@@ -1082,7 +1082,7 @@
                                             </div>
                                         </div>
                                         <repeater [source]="travelModel.employeeVisas">
-                                            <template let-visa="item">
+                                            <template #tmplRepeater let-visa="item">
                                                 <div class="saved-data">
                                                     <div class="row valign-wrapper">
                                                         <div class="col s12">
@@ -1165,7 +1165,7 @@
                                             </div>
                                         </div>
                                         <repeater [source]="travelModel.employeeContacts">
-                                            <template let-contact="item">
+                                            <template #tmplRepeater let-contact="item">
                                                 <div class="saved-data">
                                                     <div class="row">
                                                         <div class="col s7">
@@ -1411,7 +1411,7 @@
                                                     </div>
                                                 </div>
                                                 <repeater [source]="documentArray">
-                                                    <template let-docs="item">
+                                                    <template #tmplRepeater let-docs="item">
                                                         <div class="row m-bottom20 file-upload-custom">
                                                             <div class="custom-input-field col s12">
                                                                 <h6>{{docs.description}}</h6>
@@ -1432,7 +1432,7 @@
                                                     </div>
                                                 </div>
                                                 <repeater [source]='travelModel.documentUploads'>
-                                                    <template let-item='item'>
+                                                    <template #tmplRepeater let-item='item'>
                                                         <div class="saved-data m-bottom25">
                                                             <div class="row valign-wrapper">
                                                                 <div class="col s7">
