Basic grid chnages in modules.

--- a/src/app/modules/approvals/profile/profile.approvallist.html
+++ b/src/app/modules/approvals/profile/profile.approvallist.html
@@ -23,7 +23,7 @@
                         [isHeaderVisible]=false>
                         <basic-cell cell='' headerLabel=''>
                             <!--<repeater [source]='employeeData' >-->
-                            <template let-data='row'>
+                            <template #bg let-data='row'>
                                 <div class="approvals-wrapper ">
                                     <div class="row m-bottom0 valign-wrapper">
                                         <div class="col s12 m6 offset-m3 l3">
