--- a/src/app/modules/leave/leave.approval.history.html
+++ b/src/app/modules/leave/leave.approval.history.html
@@ -20,7 +20,7 @@
                     <basic-grid [(source)]='rowData' gridPagination='bottom' gridOptions='{"colWidths":[100],"widthType":"%","useScroll":false}'
                         [isHeaderVisible]=false>
                         <basic-cell>
-                            <template let-item='row'>
+                            <template #bg let-item='row'>
                                 <div class="approvals-wrapper">
                                     <div class="row m-bottom0">
                                         <div class="col s12 m10 offset-m1 l3">
