--- a/src/app/modules/travel/travel.new.approval.template.html
+++ b/src/app/modules/travel/travel.new.approval.template.html
@@ -23,7 +23,7 @@
                     <basic-grid [(source)]='travelsModel' gridPagination='bottom' gridOptions='{"colWidths":[100],"widthType":"%","useScroll":false }'
                         [isHeaderVisible]=false>
                         <basic-cell>
-                            <template let-item='row'>
+                            <template #bg let-item='row'>
                                 <div class="approvals-wrapper">
                                     <div class="row m-bottom0 valign-wrapper">
                                         <div class="col s12 m10 offset-m1 l3">
