--- a/src/app/modules/approvals/compoff/compoff.approval.html
+++ b/src/app/modules/approvals/compoff/compoff.approval.html
@@ -1,121 +1,111 @@
-<div class="top-section">
-    <div class="breadcrumb-nav">
-        <div class="row margin-zero">
-            <div class="col s12">
-                <h5>Compensatory Off Approvals
-                    <span class="right mandatory-message">
-                    <span *ngIf="isUs">US<a><img class="flag-img" src="/assets/images/us-flag.png" /></a></span>
-                    <span *ngIf="!isUs">IND<a ><img class="flag-img" src="/assets/images/india-flag.png" /></a></span>
-                    </span>
-                </h5>
-            </div>
+<div class="breadcrumb-nav">
+    <div class="row margin-zero">
+        <div class="col s12">
+            <h5>Leave Request for Approval
+                <a href="vibrant_web_help/help-landing-page.html" target="_blank" title="Help" class="help-btn">
+                    <i class="right fa fa-question-circle" aria-hidden="true"></i></a>
+            </h5>
         </div>
     </div>
-
-    <div class="attendance-wrapper p-top5">
-        <div class="row margin-zero">
-            <div class="col s6 m4 l2">
-                <div>
-                    <select materialize="material_select" [materializeSelectOptions]="yearCollection" (change)="onYearSelected($event.target.value)">
-                                        <option *ngFor="let option of yearCollection" [value]="option.value">{{option.label}}</option>
-                                    </select>
+</div>
+<div>
+    <div class="tab-container">
+        <div class="row">
+            <div class="row margin-zero">
+                <div class="col s6 m4 l2">
+                    <div>
+                        <select materialize="material_select" [materializeSelectOptions]="yearCollection" (change)="onYearSelected($event.target.value)">
+                            <option *ngFor="let option of yearCollection" [value]="option.value">{{option.label}}</option>
+                        </select>
+                    </div>
                 </div>
             </div>
-            <!--<div class="col s6 m4 l2 right right-align">
-                <button class="waves-effect waves-light btn-large holiday-btn" type='button' (click)="openHolidayList()">
-                                    <i class="left"><img src="/assets/images/holiday.png"></i>
-                                    <span class="hide-on-small-only">Holiday list</span>
-                                </button>
-            </div>-->
-        </div>
-        <div class="row attendance-data">
-            <div class="col s12  padding-zero">
-                <div class="table-container padding-zero table-scroll">
-                    <div class="row m-bottom5">
-                        <div class="col s12" *ngIf="rowData">
-                            <div *ngIf="rowData.length > 0">
-                                <basic-grid [(source)]='rowData' gridPagination='bottom' gridOptions='{"colWidths":[30,20,20,30],"widthType":"%","useScroll":false}'>
-                                    <basic-cell cell='name' headerLabel='Employee'>
-                                        <template let-item='row'>
+            <div id="drafts" class="col s12 tab-content padding-zero">
+                <div class="row main-data-container">
+                    <div class="col s12 padding-zero">
+                        <div class="reimbursement-wrapper approvals-data" *ngIf="rowData.length > 0">
+                            <div class="row m-bottom0 header hide-on-med-and-down">
+                                <div class="col s12 m2 offset-m3">
+                                    <h5 class="title">Applied For</h5>
+                                </div>
+                                <div class="col s12 m1">
+                                    <h5 class="title">Expires On</h5>
+                                </div>
+                                <div class="col s12 m1">
+                                    <h5 class="title">Action</h5>
+                                </div>
+                            </div>
+                            <div class="approvals">
+                                <basic-grid [(source)]='rowData' gridPagination='bottom' gridOptions='{"colWidths":[100],"widthType":"%","useScroll":false}'
+                                    [isHeaderVisible]=false>
+                                    <basic-cell>
+                                        <template #bg let-item='row'>
                                             <div class="approvals-wrapper">
-                                                <div class="row m-bottom0 employee-data">
-                                                    <div class="col s12 m4 center-align">
-                                                        <div class="employee-search-img">
-                                                            <a><img src="{{'/images/'+item.model.imagePath+''}}" alt="" class="circle responsive-img"></a>
-                                                        </div>
-                                                        <div class="employee-id">
-                                                            <h5>{{item.model.userId}}</h5>
+                                                <div class="row m-bottom0">
+                                                    <div class="col s12 m10 offset-m1 l3">
+                                                        <div class="row m-bottom0 employee-data">
+                                                            <div class="col s12 m4 center-align">
+                                                                <div class="employee-search-img">
+                                                                    <img src="images/{{item.model.imagePath}}" alt="" class="circle responsive-img">
+                                                                </div>
+                                                                <div class="employee-id">
+                                                                    <h5>{{item.model.userId}}</h5>
+                                                                </div>
+                                                            </div>
+                                                            <div class="col s12 m8 search-result-align">
+                                                                <div class="employee-name">
+                                                                    <h5>{{item.model.userName}}</h5>
+                                                                </div>
+                                                                <div class="employee-profile">
+                                                                    <h6> {{item.model.currentDesignation}}</h6>
+                                                                    <h6> {{item.model.olText}}</h6>
+                                                                </div>
+                                                                <div class="employee-contact-info">
+                                                                    <h6 class="email-id">{{item.model.email}}</h6>
+                                                                    <h6 [hidden]="item.model.residenceNumber == 0">t : +91 {{item.model.residenceNumber}}</h6>
+                                                                    <h6>m : +91 {{item.model.mobile}}</h6>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
-                                                    <div class="col s12 m8 search-result-align">
-                                                        <div class="employee-name">
-                                                            <h5>{{item.model.userName}}</h5>
-                                                        </div>
-                                                        <div class="employee-profile">
-                                                            <h6>{{item.model.currentDesignation}}</h6>
-                                                            <h6>{{item.model.olText}}</h6>
-                                                        </div>
-                                                        <div class="employee-contact-info">
-                                                            <h6>{{item.model.email}}</h6>
-                                                            <h6 [hidden]="item.model.residenceNumber == 0">t : +91 {{item.model.residenceNumber}}</h6>
-                                                            <h6>m : +91 {{item.model.mobile}}</h6>
+                                                    <div class="col s12 m6 l2"><span class="expense-label hide-on-large-only">Applied For</span>{{item.model.forDate}}
+                                                    </div>
+                                                    <div class="col s12 m6 l1"><span class="expense-label hide-on-large-only">Expires On</span>
+                                                        <span>{{item.model.expiresOn}}</span>
+                                                    </div>
+                                                    <div class="col s12 m12 l3 align-bottom padding-zero">
+                                                        <ui-form #approvalForm [controlMetas]="statushub" [model]="item.statusModel" [formReadonly]='false' [errorOnlyOnSubmit]='cardSubmitted'
+                                                            formCss='view-card' columOrientation='2' controlCss='view-form-info'
+                                                            inputLabelPosition='top'>
+                                                            <ui-control-item for='statusComment' depends='["status:readonlyValue"]' readonlyValue="[1]">
+                                                            </ui-control-item>
+                                                        </ui-form>
+
+                                                        <div class="row">
+                                                            <div class="col s12 right-align padding-zero">
+                                                                <a (click)="CancelEdit(item,item.statusModel)" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
+                                                                <a (click)="SaveApproval($event,item,approvalForm.mainForm,item.statusModel)" class="waves-effect waves-light btn custom-btn save-as-draft"
+                                                                    title="Save">Save</a>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </template>
                                     </basic-cell>
-                                    <basic-cell cell='date' headerLabel='Applied For'>
-                                        <template let-item='row'>
-                                            {{item.model.forDate}}
-                                        </template>
-                                    </basic-cell>
-                                    <basic-cell cell='date' headerLabel='Expires On'>
-                                        <template let-item='row'>
-                                            {{item.model.expiresOn}}
-                                        </template>
-                                    </basic-cell>
-                                    <basic-cell cell='' headerLabel='Action'>
-                                        <template let-item='row'>
-                                            <ui-form #approvalForm [controlMetas]="statushub" [model]="item.statusModel" [formReadonly]='false' [errorOnlyOnSubmit]='cardSubmitted'
-                                                formCss='' columOrientation='' controlCss='' inputLabelPosition='top'>
-                                                <ui-control-item for='statusComment' depends='["status:readonlyValue"]' readonlyValue="[1]">
-                                                </ui-control-item>
-                                            </ui-form>
-
-                                            <a (click)="CancelEdit(item,item.statusModel)" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
-                                            <a (click)="SaveApproval($event,item,approvalForm.mainForm,item.statusModel)" class="waves-effect waves-light btn custom-btn save-as-draft"
-                                                title="Save">Save</a>
-                                        </template>
-                                    </basic-cell>
-
                                 </basic-grid>
+                            </div>
+                        </div>
+                        <div class="row" *ngIf="rowData.length == 0">
+                            <div class="col s12 table-note">
+                                <span>No data available for this year</span>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row" *ngIf="rowData.length > 0">
-                    <div class="col s12 table-note">
-                        <span><i class="pending-msg fa fa-pencil"></i>Only pending entries will be editable.</span>
-                    </div>
-                </div>
-                <div class="row" *ngIf="rowData.length == 0">
-                    <div class="col s12 table-note">
-                        <span>No data available for this year</span>
-                    </div>
-                </div>
             </div>
         </div>
-
     </div>
-
-    <!--<ui-custom-model [(edited)]='holiday' [modalHeader]="'Holiday List'" (onClose)='onHolidayClose($event)'>
-        <div class="row margin-zero">
-            <div class="col s6 m4" *ngFor="let item of holidayCollection">
-                <div class="modal-view-data">
-                    <h6>{{item.holidayDate}}</h6>
-                    <h5>{{item.description}}</h5>
-                </div>
-            </div>
-        </div>
-    </ui-custom-model>-->
+</div>
+<loader-component [(loading)]='loaderModal' [(showMsg)]='loaderModalMsg' [callBackMsg]='loaderModalText' [cardLoading]="'isPage'"
+    [isConformationModal]="isConformationModal"></loader-component>
